@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.19 2005/04/11 21:46:40 tv Exp $
+# $NetBSD: Makefile,v 1.20 2005/06/08 22:46:26 reinoud Exp $
 #
 
-DISTNAME=		UDFclient.0.3.5
-PKGNAME=		udfclient-0.3.5
+DISTNAME=		UDFclient.0.4
+PKGNAME=		udfclient-0.4
 #PKGREVISION=		0
 CATEGORIES=		misc
 MASTER_SITES=		http://www.13thmonkey.org/udfclient/releases/
